width on container changed to max-width to prevent overflow but maintaing width on bigger screen size

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ html, body {
 }
 
 .container {
-  width: 600px;
+  max-width: 600px;
   margin: auto;
 }
 
